Interfaz web incluido
Se incluye una pagina HTML para seleccionar la operación deseada como : Ejecutar recopilación , inspeccionar paises o eliminar datos manualmente.

--- a/templates/template.html
+++ b/templates/template.html
@@ -6,3 +6,4 @@
 <p>¡Bienvenido! seleccione una de las dos opciones</p>
 <a href="/mi-link/" class="btn btn-success">Ejecutar recopilación</a>
 <a href="/jsonpaises" class="btn btn-success">Inspeccionar paises</a>
+<a href="/eliminar" class="btn btn-success">Eliminar datos manualmente </a>
