--- a/templates/template.html
+++ b/templates/template.html
@@ -3,7 +3,7 @@
 <title>Recopilación Paises</title>
 <meta charset=utf-8>
 <h1>Recopilación de paises</h1>
-<p>¡Bienvenido! seleccione una de las dos opciones</p>
+<p>¡Bienvenido! seleccione una de las tres opciones</p>
 <a href="/mi-link/" class="btn btn-success">Ejecutar recopilación</a>
 <a href="/jsonpaises" class="btn btn-success">Inspeccionar paises</a>
 <a href="/eliminar" class="btn btn-success">Eliminar datos manualmente </a>
